# spectral_super_resolution

./: .dockerignore  .env.example  .gitignore  ALI_envi_ascii.txt  Dockerfile  Files_preproc.ipynb  README.md  RUNPOD_SETUP.md  datasets.py  modelos.py  pyproject.toml  utiles.py
.github/workflows/: docker.yml
legacy/: data_preproc.py  metrics.py  modelos.py  utiles.py
src/spectral_sr/: __init__.py  api.py  cli.py  config.py  datasets.py  env.py  inference.py  losses.py  metrics.py  models.py  storage.py  train.py  version.py  visualization.py
