[project]
name = "spectral-sr"
version = "0.1.0"
description = "Spectral Super-Resolution for satellite imagery using deep learning with perceptual loss"
authors = [
    {name = "Ignacio Loayza Campos"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0,<2.0.0",
    "spectral>=0.22.0",
    "pandas>=1.3.0",
]

[project.scripts]
spectral-sr = "spectral_sr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectral_sr"]
