[project]
name = "spectral-sr"
version = "1.0.0"
description = "Spectral Super-Resolution for satellite imagery using deep learning with perceptual loss"
authors = [
    {name = "Ignacio Loayza Campos"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core deep learning
    "torch>=2.0.0",
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0",

    # Hyperspectral tooling
    "spectral>=0.22.0",

    # API server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Cloud storage (Cloudflare R2 via S3-compat)
    "boto3>=1.34.0",

    # .env file support
    "python-dotenv>=1.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",   # FastAPI test client
]

[project.scripts]
spectral-sr     = "spectral_sr.cli:main"
spectral-sr-api = "spectral_sr.api:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectral_sr"]

[tool.uv]
package = true
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
